<?xml version="1.0"?>
<package format="2">
  <name>agros_io</name>
  <version>0.0.0</version>
  <description>
    A package in the AgROS suite to handle the IO of some basic tools
  </description>

  <maintainer email="jgomallette@gmail.com">MrCerealKiller (Jeremy)</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>rosserial_arduino</depend>
  <depend>rosserial_client</depend>
  <depend>std_msgs</depend>

</package>
